--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.1",
+    "express": "^4.18.2",
+    "moment": "^2.29.4"
   }
 }
