--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "axios": "^1.5.1",
     "express": "^4.18.2",
