--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.5.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "moment": "^2.29.4"
   }
