--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "nodemailer": "^6.9.5"
   }
 }
